# wsRelay

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake-single-platform.yml
client/: CMakeLists.txt  args.c  args.h  main.c  main.cpp  main.h  socket.c  socket.cpp  socket.h  websocket.cpp  websocket.h
include/: check.h
server/: CMakeLists.txt  Cargo.toml
server/src/: main.rs
tests/: CMakeLists.txt
tests/Connection/: CMakeLists.txt  main.c
tests/commandline/: CMakeLists.txt  main.c
tests/connection/: CMakeLists.txt  main.c
tests/include/: check.h
utils/: CMakeLists.txt
utils/base64/: LICENSE  base64-cstring.cpp  base64-cstring.h  base64.c  base64.h
utils/common/include/: commonmacros.h
websocket/: CMakeLists.txt  http_header.c  http_header.h  https_headers.c  https_headers.h  opcodes.h  parse_url.c  parse_url.h  websocket.c  websocket.h
